manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: import-for-sa-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: sample..ce-82257991-sa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: import-for-sa
            port:
              number: 8080
        pathType: Prefix
